web/src/components/Settings/Settings.css
.zenin__settings {
    height: 100%;
    padding: var(--px-c);
    border-radius: var(--rounded);
    border: 1px solid var(--off-b);
}

.zenin__settings_about {
    display: flex;
    color: var(--mid);
    align-items: center;
    justify-content: space-between;
}

.zenin__settings_about > *:first-child {
    margin-right: auto;
}

.zenin__settings_link {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    color: var(--mid);
    text-decoration: none;
}

.zenin__settings_link:not(:first-of-type) {
    margin-left: var(--px-e);
}

.zenin__settings_link:hover {
    text-decoration: underline;
}

.zenin__settings_version {
    user-select: none;
}

.zenin__settings_link > .zenin__icon {
    margin-right: var(--px-b);
} */

